# proxnix

./: .gitignore  README.md  flake.nix
nix-deployments-rs/: Cargo.toml
nix-deployments-rs/definitions/: config.json
nix-deployments-rs/definitions/nix/: configuration.nix  flake.nix  k3s-control-plane.nix  k3s-init.nix  k3s-worker.nix  qcow.nix
nix-deployments-rs/src/: build.rs  git.rs  main.rs  nix.rs  parsing.rs  qm.rs  state.rs  types.rs
